<resources>
    <string name="app_name">labotatorioIIApp</string>
    <string name="nombre">Nombre</string>
    <string name="departamento">Departamento</string>
    <string name="edad">Edad</string>
    <string name="agregar">Agregar</string>
    <string name="esperando_datos">Esperando datos...</string>
    <string name="listado_de_personas">Listado de personas</string>
    <string name="resultado_de_selecci_n">Resultado de selección</string>
    <string name="formulario_para_agregar_datos">Formulario para agregar datos</string>
</resources>